<?xml version="1.0"?>
<package format="3">
  <name>vreferee</name>
  <version>1.0.0</version>
  <description>Visual referee system with ROS2 and Qt</description>

  <maintainer email="your.email@domain.com">Your Team</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>auto_aim_interfaces</depend>
  <depend>qtbase5-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>